# rust-data-eng-nyc

./: Cargo.toml  README.md  daily_aggregates.csv
config/: default.toml
src/: anomaly_detector.rs  config.rs  data_fetcher.rs  data_processor.rs  errors.rs  main.rs
