[package]
name = "travel_time_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
config = "0.13"

[dev-dependencies]
mockito = "1.0"